<resources>
    <string name="app_name">诺部落</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tuan">TuanActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_checkin">CheckinActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_search_more">SearchMoreActivity</string>
    <string name="title_activity_info_details">信息详情</string>
    <string name="title_activity_shop_details">店铺详情</string>
    <string name="title_activity_sou_quan_cheng">搜全城</string>
    <string name="title_activity_shop_details_more">ShopDetailsMore</string>
    <string name="title_activity_paihangbang">Paihangbang</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_shop_detailsqiandao">ShopDetailsqiandaoActivity</string>
    <string name="title_activity_shop_detailsdianping">ShopDetailsdianpingActivity</string>
    <string name="title_activity_paihangbang_more">Paihangbang_more</string>
    <string name="title_activity_paihangbang_bzrm">Paihangbang_bzrm</string>
    <string name="title_activity_tuan_details">TuanDetailsActivity</string>
    <string name="feedback_title">用户反馈</string>
    <string name="feedback_text1">建议或意见</string>
    <string name="feedback_hint1">如您遇到问题，请留下您的宝贵意见和联系方式，我们会及时与您联系。</string>
    <string name="feedback_text2">手机或QQ</string>
    <string name="feedback_hint2">手机或QQ</string>
    <string name="feedback_submit">提　交</string>
    <string name="more_main_title">更多</string>
    <string name="feedback">意见反馈</string>
    <string name="checkupdate">检查更新</string>
    <string name="about">关于</string>
    <string name="back">返回</string>
    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_save">保存</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_settings">设置</string>
    <string name="action_usercenter">个人中心</string>
    <string name="action_userdetail">详细资料</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
    <string name="action_title_feedback">意见反馈</string>
    <string name="action_send">发送</string>
    <string name="action_share">分享</string>
    <string name="title_activity_huangye">收藏</string>
    <string name="ac_more">更多…</string>
    <string name="collection">收藏</string>
    <string name="huangye">黄页</string>
    <string name="drawer_btn_rss">工具管理</string>
    <string name="subscribe_my_category">我的工具</string>
    <string name="subscribe_more_category">更多工具</string>
    <string name="subscribe_manager_category_info">单击增删工具</string>
    <string name="subscribe_manager_category_info_2">单击增删工具，长按拖拽排序</string>
    <string name="status_available">在线</string>
    <string name="status_away">离开</string>
    <string name="status_chat">Q我吧</string>
    <string name="status_dnd">请勿打扰</string>
    <string name="status_xa">隐身</string>
    <string name="status_offline">离线</string>
    <string name="status_online">在线</string>
    <string name="login_tip">点击登录</string>
    <string name="aboutme">关于我们</string>
    <string name="copy_right">诺部落 版权所有</string>
    <string name="copy_right_text">Copyright@2014 All Rights Reserved.</string>
    <string name="timeout_try_again">网络连接超时，请重试</string>
    <string name="default_tip">请稍等...</string>
    <string name="net_error">网络请求异常</string>
    <string name="invalid_phone">无效的电话号码，请确认是否填写正确</string>
    <string name="login_error">错误的用户名或密码，请检查是否填写正确</string>
    <string name="jiazheng_name">家政</string>
    <string name="call">电话</string>
    <string name="add_sms"></string>
    <string name="sms">信息</string>
    <string name="tool">工具</string>
    <string name="relation">关系</string>
    <string name="add_msg">新建信息</string>
    <string name="change_send_user">选择发送联系人</string>
    <string name="add_contract">新增联系人</string>
    <string name="edit_contract">编辑联系人</string>
    <string name="save">保存</string>
    <string name="contact_detail">联系人详情</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="qianming">个性签名</string>
    <string name="default_qianming">其实我比较低调，不爱写签名</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="area">地区</string>
    <string name="tel">手机号码</string>
    <string name="user_msg">个人资料</string>
    <string name="tuichu">退出</string>
    <string name="code">编号</string>
    <string name="empty_tip">抱歉，没有找到相关信息</string>
    <string name="change_fabu_type">选择发布类型</string>
    <string name="action_my_shop">我的店铺</string>
    <string name="qq_code">QQ号</string>
    <string name="weixin_code">微信号</string>
    <string name="url_address">网址</string>
    <string name="yingye_time">营业时间</string>
    <string name="other_phone_code">其他电话</string>
    <string name="title">标&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题</string>
    <string name="service_area">服务区域</string>
    <string name="service_jieshao">服务介绍</string>
    <string name="service_qq_code">Q&#160;&#160;Q&#160;&#160;&#160;&#160;号</string>
    <string name="service_tel">联系电话</string>
    <string name="service_weixin_code">微&#160;&#160;信&#160;&#160;号</string>
    <string name="title_tip">6-25个字</string>
    <string name="jieshao_tip">10~2000个字之间，不能填写电话、QQ等联系方式或特殊符号，否则信息将会被删除</string>
    <string name="fabu_btn">发布</string>
    <string name="change_area_tip">选择区域</string>
    <string name="system_error">系统出现异常，我们会尽快修复。</string>
    <string name="me">我</string>
    <string name="notebook">记事本</string>
    <string name="notebook_tip">这只是个开始</string>
    <string name="input_title_tip">请输入笔记标题</string>
    <string name="notebook_load_error">笔记加载异常</string>
    <string name="delete_error">删除失败</string>
    <string name="notebook_add_tip">内容必须填写</string>
    <string name="search_tag">添加或搜索标签</string>
    <string name="tv_search">搜索</string>
    <string name="tv_add">添加</string>
    <string name="notebook_search_tip">搜索标题或内容</string>
    <string name="default_title">默认标题</string>
    <string name="animate">Animate</string>
    <string name="basic_map">基本地图</string>
    <string name="basic_description">介绍如何创建一个基本地图</string>
    <string name="base_fragment_map">SupportMapFragment创建地图</string>
    <string name="base_fragment_description">介绍SupportMapFragment方式创建地图</string>
    <string name="camera_demo">Camera功能</string>
    <string name="camera_description">介绍在地图中操作Camera各种功能</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">AMaps3D  Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="events_demo">Events功能</string>
    <string name="events_description">介绍对地图的点击，长按，拖动地图事件功能</string>
    <string name="fill_stroke">Fill Stroke</string>
    <string name="fill_color">Fill Color</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="hybrid">Hybrid</string>
    <string name="location">正在定位中</string>
    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
        <item>@string/night_mode</item>
    </string-array>
    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图分别以正常、卫星模式展示出</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="locationmodesource_demo">Location三种模式</string>
    <string name="locationmodesource_description">介绍定位、追随、选择不同模式使用</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="touch_the_map">地图触摸事件</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="night_mode">Night</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="navigatearrow_demo">NavigateArrow功能</string>
    <string name="navigatearrow_description">介绍如何在地图中绘制导航指示箭头功能</string>
    <string name="arc_demo">Arc功能</string>
    <string name="arc_description">介绍在地图中绘制弧形</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
    <string name="route_demo">Route路径规划</string>
    <string name="route_description">介绍如何在地图中绘制Route</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="terrain">Terrain</string>
    <string name="tilt">倾斜手势</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="opengl_demo">Opengl接口功能</string>
    <string name="opengl_description">介绍地图中开放Opengl接口功能</string>
    <string name="uisettings_demo">UI Settings功能</string>
    <string name="uisettings_description">介绍地图中UI Settings功能</string>
    <string name="geocoder_demo">地理编码 功能</string>
    <string name="geocoder_description">介绍 geocoder地理编码 功能</string>
    <string name="poikeywordsearch_demo">poi关键字搜索</string>
    <string name="poikeywordsearch_description">介绍poi关键字搜索功能</string>
    <string name="poiaroundsearch_demo">poi周边搜索</string>
    <string name="poiaroundsearch_description">介绍poi周边搜索功能</string>
    <string name="offlinemap_demo">离线地图功能</string>
    <string name="offlinemap_description">介绍如何使用离线地图</string>
</resources>