<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
            android:id="@+id/action_info_search"
            android:icon="@drawable/actionbar_search_icon"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/action_search"/>
    <item
            android:id="@+id/action_fabu_sms"
            android:icon="@drawable/actionbar_add_icon"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/action_plus"/>
    <item
            android:id="@+id/action_my_shop"
            android:icon="@drawable/ofm_collect_icon"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/action_my_shop"/>
    <item
            android:id="@+id/action_feedback"
            android:icon="@drawable/ofm_feedback_icon"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/action_title_feedback"/>
</menu>
